--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Our Website</title>
 </head>
 <body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
 </html>
